// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site: Radio Basic Usage 1`] = `
Object {
  "docs": "Radio buttons let a user select only one of a limited number of choices.",
  "html": "<div>
  <input
    type=\\"radio\\"
    id=\\"one\\"
    color=\\"purple\\"
    name=\\"demo\\"
    class=\\"drac-radio drac-radio-purple\\"
    checked=\\"\\"
  /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Checked</label>
</div>
",
  "react": "<div>
  <Radio id=\\"one\\" defaultChecked={true} color=\\"purple\\" name=\\"demo\\" />
  <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
    Checked
  </label>
</div>;
",
  "title": "Usage",
}
`;

exports[`Site: Radio Colors 1`] = `
Object {
  "docs": "Radio can be customized to use any of the Dracula UI theme colors.",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"white\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-white\\"
    /><label for=\\"white\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"cyan\\"
      color=\\"cyan\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-cyan\\"
    /><label for=\\"cyan\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"green\\"
      color=\\"green\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-green\\"
    /><label for=\\"green\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"orange\\"
      color=\\"orange\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-orange\\"
    /><label for=\\"orange\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"pink\\"
      color=\\"pink\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-pink\\"
    /><label for=\\"pink\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"purple\\"
      color=\\"purple\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-purple\\"
    /><label for=\\"purple\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"red\\"
      color=\\"red\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-red\\"
    /><label for=\\"red\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"yellow\\"
      color=\\"yellow\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-yellow\\"
    /><label for=\\"yellow\\" class=\\"drac-text drac-text-white\\">Radio</label>
  </div>
</div>
",
  "react": "<div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"white\\" color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"white\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"cyan\\" color=\\"cyan\\" name=\\"demo\\" />
    <label htmlFor=\\"cyan\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"green\\" color=\\"green\\" name=\\"demo\\" />
    <label htmlFor=\\"green\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"orange\\" color=\\"orange\\" name=\\"demo\\" />
    <label htmlFor=\\"orange\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"pink\\" color=\\"pink\\" name=\\"demo\\" />
    <label htmlFor=\\"pink\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"purple\\" color=\\"purple\\" name=\\"demo\\" />
    <label htmlFor=\\"purple\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"red\\" color=\\"red\\" name=\\"demo\\" />
    <label htmlFor=\\"red\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"yellow\\" color=\\"yellow\\" name=\\"demo\\" />
    <label htmlFor=\\"yellow\\" className=\\"drac-text drac-text-white\\">
      Radio
    </label>
  </div>
</div>;
",
  "title": "Colors",
}
`;

exports[`Site: Radio Disabled 1`] = `
Object {
  "docs": "A radio select is unusable and un-clickable.",
  "html": "<div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"one\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-white\\"
      checked=\\"\\"
    /><label for=\\"one\\" class=\\"drac-text drac-text-white\\">Checked</label>
  </div>
  <div style=\\"margin-bottom: 10px\\">
    <input
      type=\\"radio\\"
      id=\\"two\\"
      color=\\"white\\"
      name=\\"demo\\"
      class=\\"drac-radio drac-radio-white\\"
    /><label for=\\"two\\" class=\\"drac-text drac-text-white\\">Unchecked</label>
  </div>
</div>
",
  "react": "<div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"one\\" defaultChecked={true} color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"one\\" className=\\"drac-text drac-text-white\\">
      Checked
    </label>
  </div>
  <div style={{ marginBottom: 10 }}>
    <Radio id=\\"two\\" color=\\"white\\" name=\\"demo\\" />
    <label htmlFor=\\"two\\" className=\\"drac-text drac-text-white\\">
      Unchecked
    </label>
  </div>
</div>;
",
  "title": "Disabled",
}
`;
